# gitanalyser

./: Cargo.toml
src/: analysis.rs  arguments.rs  commits.rs  expression_interpreter.rs  expression_parser.rs  main.rs  serialization.rs
testlinker/: Cargo.toml
testlinker/src/: main.rs
